--- a/css/detail_product.css
+++ b/css/detail_product.css
@@ -16,3 +16,79 @@ body {
     font-family: 'Quicksand', sans-serif;
     margin: 0;
 }
+.product_detail {
+    position: absolute;
+    right: 0;
+    width: 360px;
+    padding-bottom: 24px;
+}
+.prduct_detail-close {
+    background: var(--white);
+    height: 14px;
+    width: 14px;
+    top: 24px;
+    left: 24px;
+    padding: 12px;
+    position: absolute;
+    border-radius: 50%;
+    display: flex;justify-content: center;
+    align-items: center;
+}
+.prduct_detail-close:hover {
+    cursor: pointer;
+}
+
+.product_detail img:nth-child(2){
+    width: 100%;
+    height: 360px;
+    object-fit: cover;
+    border-radius: 0 0 20px 20px;
+}
+.product-info {
+    margin: 24px 24px 0 24px;
+}
+.product-info p:nth-child(1){
+    font-size: var(--md);
+    font-weight: bold;
+    margin-top: 0;
+    margin-bottom: 24px;
+}
+.product-info p:nth-child(2){
+    font-size: var(--md);
+    color: var(--very_light_pink);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+
+.product-info p:nth-child(3){
+    font-size: var(--sm);
+    color: var(--very_light_pink);
+    margin-top: 0;
+    margin-bottom: 36px;
+}
+
+
+.primary-button {
+    background: var(--purple);
+    border-radius: 8px;
+    border: none;
+    color: var(--text_input_field);
+    width: 100%;
+    cursor: pointer;
+    font-size: var(--md);
+    font-weight: bold;
+    height: 50px;
+}
+.add-to-cart-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.test {
+    margin: 24px 0 0;
+}
+@media (max-width:640px){
+    .product_detail {
+        width: 100%;
+    }
+}
